style.css
/* basic style */
.container {
  background-color: #f8f8f8;
  color: #333;
  font-family: lato, sans-serif;
}
.header-container {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}
.header-container img {
  width: 100%;
}
.header-container .header-link {
  font-family: fantasy, cursive;
}

@media (max-width:768px) {
  .header-container { 
    text-align: center;
  }
}
.centered-main-page-element {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}
.task-input {
  width: 56%;
  display: inline-block;
  flex-grow: 1;
  overflow: hidden;
}
.task-row-wrapper {
  display: flex;
}
.task-list {
  margin:0;
  padding: 0px;
}
.button {
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: lato, sans-serif;
  cursor: pointer;
}
.button:hover {
  color: #3a3a3a;
}
/* heading */
h3, 
.lable-add-item {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}
.input-text {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #fff;
  border-radius: 6px;
  font-family: lato, sans-serif;
  color: #888;
}
.input-text:focus {
  color: #333;
}

/* new task */
.lable-add-item {    
  display: block;
  margin: 0 0 20px;
}
#new-task-id {
  width: 318px;
}

/* task list */
.list-item {
  padding: 20px 0;
  border-bottom: 1px solid #eee;

  display: flex;
  justify-content: space-between;
  align-items: center;
}
.list-item.check-box {
  margin: 0 10px;
}
.list-item > .checkbox-lable {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}
.list-item > .input-text {
  width: 226px;
}
.button.delete-button img {
  height: 2em;
  transform: rotatez(45deg);
  transition: transform 200ms ease-in;
}
.button.delete-button img:hover {
  transform: rotatez(0);
}

/* completed */
#completed-tasks-id .checkbox-lable {
  text-decoration: line-through;
  color: #888;
}

/* edit task */
.list-item .input-text {
  display: none;
}
.list-item.edit-mode .input-text {
  display: inline-block;
  width: 224px;
}
.list-item.edit-mode .checkbox-lable {
  display: none;
}

